// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exports_default.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const x = "foo";

export default x;

=====================================output=====================================
// @flow

const x = "foo";

export default x;

================================================================================
`;

exports[`exports_named.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export const foo = "foo";
export const bar = "bar";

=====================================output=====================================
// @flow

export const foo = "foo";
export const bar = "bar";

================================================================================
`;
